--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,11 @@ code {
     monospace;
 }
 
+.testNeon {
+    color: #FF5E00;
+    text-shadow: 0 0 5px #FF5E00, 0 0 10px #FF5E00, 0 0 20px #FF5E00;
+}
+
 @import url('https://unpkg.com/boxicons/css/boxicons.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 @font-face {
