Build complet et mise à jour

--- a/frontend/src/components/modals/Login.module.css
+++ b/frontend/src/components/modals/Login.module.css
@@ -17,3 +17,20 @@
 .subscribe:hover {
   color: var(--ColorB);
 }
+
+.borderTop {
+  border-left: 2px solid var(--ColorC);
+  border-top: 2px solid var(--ColorC);
+  border-right: 2px solid var(--ColorC);
+}
+
+.borderMid {
+  border-left: 2px solid var(--ColorC);
+  border-right: 2px solid var(--ColorC);
+}
+
+.borderBottom {
+  border-left: 2px solid var(--ColorC);
+  border-bottom: 2px solid var(--ColorC);
+  border-right: 2px solid var(--ColorC);
+}
