Build complet et mise à jour

--- a/frontend/src/components/others/CardLarge.module.css
+++ b/frontend/src/components/others/CardLarge.module.css
@@ -4,3 +4,9 @@
   border-bottom-left-radius: 7px;
   overflow: hidden;
 }
+
+.shadow {
+  box-shadow:
+    5px 5px 10px rgba(0, 0, 0, 0.5),
+   -5px -5px 10px rgba(255, 255, 255, 0.03);
+}
