--- a/frontend/src/pages/articles/articles.module.css
+++ b/frontend/src/pages/articles/articles.module.css
@@ -7,3 +7,9 @@
   box-shadow: 0 0 0.25rem 0.25rem var(--backgroundColorHaloRGB); /* bleu clair */
   border-color: var(--backgroundColorHaloRGB);
 }
+
+.shadow {
+  box-shadow:
+    5px 5px 10px rgba(0, 0, 0, 0.5),
+   -5px -5px 10px rgba(255, 255, 255, 0.03);
+}
