--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,10 @@ code {
   padding: 0px;
 }
 
+a {
+  text-decoration: none;
+}
+
 .bx {
   font-family: 'boxicons' !important;
 }
@@ -105,6 +109,28 @@ code {
   font-size: 32px;
 }
 
+.bxEnabledToDisabled {
+  color: var(--backgroundColorSuccess);
+  font-size: 32px;
+  transition: color 0.25s ease;  /* Transition de 0.5 seconde */
+}
+
+.bxEnabledToDisabled:hover {
+  color: var(--backgroundColorDangerRGB);
+  font-size: 32px;
+}
+
+.bxDisabledToEnabled {
+  color: var(--backgroundColorDangerRGB);
+  font-size: 32px;
+  transition: color 0.25s ease;  /* Transition de 0.5 seconde */
+}
+
+.bxDisabledToEnabled:hover {
+  color: var(--backgroundColorSuccess);
+  font-size: 32px;
+}
+
 .bxNormalColorE {
   color: var(--backgroundColorE);
   font-size: 32px;
@@ -179,8 +205,21 @@ html body {
   color: var(--ColorE);
 }
 
+.txtColorSuccessLight {
+  color: var(--backgroundColorSuccessLight);
+}
+
 .txtBold {
   font-weight: bold;
+}
+
+.txtColorWhiteToTxtColorB {
+  color: var(--txtColorWhite);
+  transition: color 0.2s ease;
+}
+
+.txtColorWhiteToTxtColorB:hover {
+  color: var(--txtColorB);
 }
 
  /* Textes : Fin */
@@ -387,9 +426,33 @@ html body {
 
 /* Badges : Début */
 .badge-custom {
-  background-color: #6B4FA3; /* violet foncé */
+  background-color: #6B4FA3;
   color: white;
+}
+
+.badge-customOff {
+  background-color: var(--backgroundColorE);
+  color: white;
+  transition: background-color 0.25s ease;
+}
+
+.badge-customOn {
+  background-color: var(--ColorA);
+  color: white;
+  transition: background-color 0.25s ease;
 }
 /* Badges : Fin */
 
 /* Autres */
+
+.topMinus3 {
+  margin-top: -3px;
+}
+
+/* Pointers : début */
+
+.cPointer {
+  cursor: pointer;
+}
+
+/* Pointers : fin */
