--- a/frontend/src/pages/articles/createArticle.module.css
+++ b/frontend/src/pages/articles/createArticle.module.css
@@ -28,3 +28,16 @@ button:disabled {
   border-radius: 4px;
   font-size: 16px;
 }
+
+.breakerTitre {
+  display: block;
+  width: 100%;
+  height: 5px;
+  background: linear-gradient(
+    to right,
+    transparent 0%,
+    var(--ColorA) 40%,
+    var(--ColorA) 60%,
+    transparent 100%
+  );
+}
