Build complet et mise à jour

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -62,6 +62,7 @@ a {
   --backgroundColorCautionLight: #D56A11;
   --backgroundColorCautionLightRGB: rgba(213, 106, 17);
 
+  --backgroundColorHalo: #ad830580;
   --backgroundColorHaloRGB: rgba(173, 131, 5, 0.5);
   
   --ColorA: #FF9901;
