--- a/frontend/src/pages/articles/articles.module.css
+++ b/frontend/src/pages/articles/articles.module.css
@@ -13,3 +13,19 @@
     5px 5px 10px rgba(0, 0, 0, 0.5),
    -5px -5px 10px rgba(255, 255, 255, 0.03);
 }
+
+.bandeauTag {
+
+}
+
+.bandeauTag:hover {
+  background-color: var(--backgroundColorCaution) !important;
+}
+
+.bandeauTagFocus {
+  background-color: var(--backgroundColorHalo) !important;
+}
+
+.bandeauTagFocus:hover {
+  background-color: var(--backgroundColorHalo) !important;
+}
