--- a/frontend/src/components/modals/Subscribe.module.css
+++ b/frontend/src/components/modals/Subscribe.module.css
@@ -7,3 +7,13 @@
     top: 16px;  /* Ajuste la distance du haut si nécessaire */
     right: 16px;  /* Aligne à droite avec un léger espacement */
   }
+
+.login {
+  color: var(--txtColorWhite);
+  cursor: pointer;
+  transition: color 0.3s ease, color 0.3s ease;
+}
+
+.login:hover {
+  color: var(--ColorB);
+}
