--- a/frontend/src/layouts/MenuHeader.module.css
+++ b/frontend/src/layouts/MenuHeader.module.css
@@ -29,6 +29,15 @@
     position: relative;
     text-align: center;
     padding-top: 6px;
+    cursor: pointer;
+}
+
+.MenuHeader li a {
+    transition: color 0.3s ease;
+}
+
+.MenuHeader li:hover > a {
+    color: var(--ColorA);
 }
 
 .MenuHeader a {
@@ -38,26 +47,54 @@
 
 /* --- Sous-menus (Dropdown) --- */
 .subMenus {
-    display: none;
+    /*display: none;*/
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.4s ease, visibility 0.4s ease, background-color 0.4s ease;
+    overflow: hidden;
     position: absolute;
-    background: #444;
+    background-color: var(--txtColorDarkBis);
     list-style: none;
     padding: 0;
     margin: 0;
     top: 100%;
     left: 0;
+    border-bottom-left-radius: 10px;   /* obligatoire pour que le fond du ul li ne déborde pas du radius */
+    border-bottom-right-radius: 10px;  /* obligatoire pour que le fond du ul li ne déborde pas du radius */
 }
 
 .MenuHeader li:hover .subMenus {
-    display: block;
+    /*display: block;*/
+    opacity: 1;
+    visibility: visible;
 }
 
 .subMenus li {
     padding: 10px;
+    transition: opacity 0.4s ease, visibility 0.4s ease, background-color 0.4s ease;
 }
 
-.subMenus a {
+.subMenus li > a {
     color: white;
+}
+
+.subMenus li:hover {
+    transition: opacity 0.4s ease, visibility 0.4s ease, background-color 0.4s ease;
+    background-color: var(--txtColorDarkBisLight);
+}
+
+.MenuHeader li ul li {
+    border-left: 2px solid #FF9901;
+    border-right: 2px solid #FF9901;
+}
+
+.MenuHeader li ul li:last-child {
+    border-left: 2px solid #FF9901;
+    border-right: 2px solid #FF9901;
+    border-bottom: 2px solid #FF9901;
+    border-top: none;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 /* --- Zone Utilisateur (Pseudo + Déco) --- */
