--- a/frontend/src/pages/articles/articlePage.module.css
+++ b/frontend/src/pages/articles/articlePage.module.css
@@ -16,3 +16,20 @@
     5px 5px 10px rgba(0, 0, 0, 0.5),
    -5px -5px 10px rgba(255, 255, 255, 0.03);
 }
+
+.ancrageOverlayCommandesAdmin {
+  position: relative;
+  height: 20px;
+}
+
+.overlayCommandesAdmin {
+  top: -20px;
+  background-color: var(--backgroundColorERGBTrans);
+  position: absolute;
+  border: 1px solid white;
+  border-radius: 6px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
