--- a/frontend/src/pages/articles/articlePage.module.css
+++ b/frontend/src/pages/articles/articlePage.module.css
@@ -33,3 +33,22 @@
   padding-left: 5px;
   padding-right: 5px;
 }
+
+#btnGoTop {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 2vh;
+  right: 2vw;
+  background-color: var(--ColorA);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+#btnGoTop:hover {
+  background-color: var(--ColorA);
+}
