--- a/frontend/src/layouts/MenuHeader.module.css
+++ b/frontend/src/layouts/MenuHeader.module.css
@@ -162,9 +162,9 @@
         width: 85%; /* largeur du panneau sur mobile */
         max-width: 85%;
         height: 100vh;
-        background-color: var(--txtColorDarkBis);
-        transition: right 0.1s ease-in-out;
-        padding-top: 60px; /* espace sous le burger */
+        background: linear-gradient(to bottom, var(--txtColorDark), var(--txtColorDarkBis), var(--txtColorDark));
+        border-left: 2px solid #FF9901;
+        transition: right 0.5s ease-in-out;
         padding-left: 0px;
         z-index: 1000;
     }
@@ -179,10 +179,25 @@
             padding: 15px 20px;
             width: 100%;
             text-align: center;
+            border-bottom: 2px solid transparent; /* taille de la bordure */
+            border-image: linear-gradient(
+                to right,
+                transparent,
+                #FF9901 50%,
+                transparent
+            ) 1;
         }
 
             .MenuHeaderMini li a {
+                transition: color 0.5s ease;
                 color: white;
+                text-decoration: none;
+                display: block;
+            }
+
+            .MenuHeaderMini li a:hover {
+                color: #FF9901;
+                transition: color 0.5s ease;
                 text-decoration: none;
                 display: block;
             }
@@ -191,11 +206,25 @@
     .subMenusMini {
         display: none;
         flex-direction: column;
+        padding-bottom: 15px;
         padding-left: 20px;
+        padding-right: 20px;
+        margin-top: 15px;
+        max-height: 0%;
+    }
+
+        .subMenusMini li {
+           border-bottom: 0px; 
     }
 
     .MenuHeaderMini li:hover .subMenusMini {
         display: flex;
+        max-height: 100%;
+    }
+
+    /* hover sur parent uniquement */
+    .MenuHeaderMini li:hover > a {
+    color: #FF9901;
     }
 }
 
