Build complet et mise à jour v0.99

--- a/frontend/src/pages/articles/articlePage.module.css
+++ b/frontend/src/pages/articles/articlePage.module.css
@@ -52,3 +52,10 @@
 #btnGoTop:hover {
   background-color: var(--ColorA);
 }
+
+.articleInsered img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  height: auto;
+}
