--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -521,3 +521,21 @@ html body {
 }
 
 /* Pagination : Fin */
+
+/* TipTap : Début */
+
+.ProseMirror img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%; /* évite qu’elle dépasse */
+}
+
+.article-box {
+  border: 2px solid #888;
+  border-radius: 8px;
+  padding: 12px;
+  margin: 12px 0;
+  background: var(--backgroundColorB);
+}
+
+/* TipTap : Fin */
