--- a/frontend/src/pages/articles/articlePage.module.css
+++ b/frontend/src/pages/articles/articlePage.module.css
@@ -7,6 +7,7 @@
   width: 100%;
   height: auto;
   object-fit: cover;
+  object-position: center;
   border-radius: 8px 8px 0 0;
   max-height: 400px; /* à adapter si besoin */
 }
@@ -53,9 +54,16 @@
   background-color: var(--ColorA);
 }
 
+.articleInsered {
+  color: var(--backgroundColorF);
+}
+
 .articleInsered img {
   display: block;
   margin: 0 auto;
-  max-width: 100%;
+  max-width: 90%;
   height: auto;
+  box-shadow:
+    5px 5px 10px rgba(0, 0, 0, 0.5),
+   -5px -5px 10px rgba(255, 255, 255, 0.03);
 }
