--- a/frontend/src/pages/smashup/smashup.module.css
+++ b/frontend/src/pages/smashup/smashup.module.css
@@ -21,25 +21,6 @@
     filter: grayscale(100%);
 }
 
-.overlayText {
-    position: absolute;
-    bottom: 0; /* en bas */
-    width: 100%;
-    padding: 10px;
-    font-weight: bold;
-    color: white;
-    text-align: center;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.6);
-    opacity: 0; /* invisible par défaut */
-    transition: opacity 0.3s ease-in-out;
-    border-radius: 0 0 10px 10px;
-}
-
-.conteneurImgX5:hover .overlayText {
-  opacity: 1; /* devient visible au survol */
-}
-
 /* Mini devices */
 @media (max-width: 992px) {
     .conteneurImgX5 {
@@ -48,6 +29,21 @@
         border-radius: 10px;
         transition: border 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease;
         filter: brightness(0.75);
+        cursor: pointer;
+    }
+
+    .overlayText {
+        position: absolute;
+        bottom: 0; /* en bas */
+        width: 100%;
+        padding: 10px;
+        font-weight: bold;
+        color: white;
+        text-align: center;
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.6);
+        opacity: 1;
+        border-radius: 0 0 10px 10px;
     }
 }
 
@@ -59,6 +55,25 @@
         border-radius: 10px;
         transition: border 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease;
         filter: brightness(0.75);
+    }
+
+    .overlayText {
+        position: absolute;
+        bottom: 0; /* en bas */
+        width: 100%;
+        padding: 10px;
+        font-weight: bold;
+        color: white;
+        text-align: center;
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.6);
+        opacity: 0; /* invisible par défaut */
+        transition: opacity 0.3s ease-in-out;
+        border-radius: 0 0 10px 10px;
+    }
+
+    .conteneurImgX5:hover .overlayText {
+        opacity: 1; /* devient visible au survol */
     }
 }
 
