--- a/frontend/src/pages/smashup/smashup.module.css
+++ b/frontend/src/pages/smashup/smashup.module.css
@@ -24,12 +24,14 @@
 /* Mini devices */
 @media (max-width: 992px) {
     .conteneurImgX5 {
+        position: relative;
         width: 25%;
         border: 2px solid white;
         border-radius: 10px;
         transition: border 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease;
         filter: brightness(0.75);
         cursor: pointer;
+        overflow: hidden; 
     }
 
     .overlayText {
