Build complet et mise à jour 1.002c

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -383,6 +383,14 @@ span { font-size: 1rem; }
   color: var(--txtColorPlayerGreen);
 }
 
+.txtColorRed {
+  color: var(--txtColorPlayerRed);
+}
+
+.txtColorBlue {
+  color: var(--txtColorPlayerBlue);
+}
+
 .text-center {
   text-align: center;
 }
