--- a/frontend/src/pages/smashup/smashup.module.css
+++ b/frontend/src/pages/smashup/smashup.module.css
@@ -29,7 +29,7 @@
         border: 2px solid white;
         border-radius: 10px;
         transition: border 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease;
-        filter: brightness(0.75);
+        filter: brightness(0.9);
         cursor: pointer;
         overflow: hidden; 
     }
@@ -60,7 +60,7 @@
         border: 2px solid white;
         border-radius: 10px;
         transition: border 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease;
-        filter: brightness(0.75);
+        filter: brightness(0.9);
     }
 
     .overlayText {
@@ -89,7 +89,7 @@
 }
 
 .conteneurImgX5:has(.conteneurImgSelected) {
-    filter: brightness(1);
+    filter: brightness(1.1);
     box-shadow: 0 0 3px 7px var(--txtColorPlayerGreen);
 }
 
@@ -139,7 +139,7 @@
   position: fixed;
   width: 60px;
   height: 60px;
-  bottom: 2vh;
+  bottom: 8vh;
   right: 2vw;
   background-color: var(--ColorA);
   color: white;
@@ -152,4 +152,19 @@
 
 #btnRollBack:hover {
   background-color: var(--ColorA);
+}
+
+.bandeauInstructionDraft {
+  position: fixed;
+  width: 100%;
+  height: 60px;
+  padding-top: 8px;
+  bottom: 2vh;
+  background-color: var(--ColorA);
+  border-top: 2px solid var(--backgroundColorE);
+  border-bottom: 2px solid var(--backgroundColorE);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
