--- a/frontend/src/pages/dicethrone/dicethrone.module.css
+++ b/frontend/src/pages/dicethrone/dicethrone.module.css
@@ -39,7 +39,7 @@
         width: 29%;
         border-radius: 10px;
         transition: border 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease;
-        filter: brightness(0.9);
+        /*filter: brightness(0.9);*/
         cursor: pointer;
         overflow: hidden; 
     }
@@ -78,7 +78,7 @@
         border: 2px solid white;
         border-radius: 10px;
         transition: border 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease;
-        filter: brightness(0.9);
+        /*filter: brightness(0.9);*/
     }
 
     .overlayText {
@@ -143,7 +143,7 @@
 
 .factionSelectedFinal {
     border: 2px solid var(--ColorB);
-    box-shadow: 0 0 30px 4px var(--ColorB);
+    box-shadow: 0 0 10px 4px var(--ColorB);
 }
 
 .conteneurImgX6.factionPicked:hover {
@@ -158,12 +158,12 @@
 
 .factionPickedRed {
     border: 2px solid var(--txtColorPlayerRed);
-    box-shadow: 0 0 3px 4px var(--txtColorPlayerRed);
+    box-shadow: 0 0 10px 4px var(--txtColorPlayerRed);
 }
 
 .factionPickedBlue {
     border: 2px solid var(--txtColorPlayerBlue);
-    box-shadow: 0 0 3px 4px var(--txtColorPlayerBlue);
+    box-shadow: 0 0 10px 4px var(--txtColorPlayerBlue);
 }
 
 /* Bouton rollback */
